# squarifier

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
ansible/: site.yml
ansible/roles/squarifier/defaults/: main.yml
ansible/roles/squarifier/tasks/: main.yml
ansible/roles/squarifier/templates/: squarifier.service.j2
src/: main.rs
src/site/: index.html
