[package]
authors = ["Sergei Gureev <bemyak@pm.me>"]
edition = "2018"
name    = "squarifier"
version = "0.3.1"

[profile.release]
lto   = true
panic = 'abort'

[dependencies]
async-std  = { version = "1.9", features = ["attributes"] }
base64     = "0.13"
http-types = "2.11"
image      = "0.23"
surf       = "2.2"
tide       = "0.16"
