[package]
authors = ["Sergei Gureev <bemyak@pm.me>"]
edition = "2018"
name    = "squarifier"
version = "0.3.1"

[profile.release]
lto   = true
panic = 'abort'

[dependencies]
async-std  = { version = "1.12", features = ["attributes"] }
base64     = "0.20"
http-types = "2.12"
image      = "0.24"
surf       = "2.3"
tide       = "0.16"
